# repo-scaffold

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.agents/: AGENTS.md  settings.json  styleguide.md
.agents/skills/commit-messages/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
scripts/: init-template.sh
